--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
                 <div class="destinations" data-aos="fade-zoom-in">
                     <div class="destination">
-                        <a href="">
+                        <a href="pages/vienna.html">
                             <img class="destination-img" src="./images/vienna.webp" />
                             <h1>Enjoy the beauty of Vienna</h1>
                         </a>
@@ -109,9 +109,9 @@
                             <i class="fa-solid fa-star"></i> 4.8
                         </div>
                     </div>
-
+                    
                     <div class="destination">
-                        <a href="">
+                        <a href="pages/prague.html">
                             <img class="destination-img" src="./images/prague.jpg" />
                             <h1>The heart of Czech Republic</h1>
                         </a>
@@ -122,7 +122,7 @@
                     </div>
 
                     <div class="destination">
-                        <a href="">
+                        <a href="pages/kemer.html">
                             <img class="destination-img" src="./images/kemer.jpg" />
                             <h1>Take a break in nature</h1>
                         </a>
@@ -133,7 +133,7 @@
                     </div>
 
                     <div class="destination">
-                        <a href="">
+                        <a href="pages/santorini.html">
                             <img class="destination-img" src="./images/greece.webp" />
                             <h1>Visit the Famous Santorini</h1>
                         </a>
@@ -144,7 +144,7 @@
                     </div>
 
                     <div class="destination">
-                        <a href="">
+                        <a href="pages/rome.html">
                             <img class="destination-img" src="./images/rome.webp" />
                             <h1>See the history with your eyes</h1>
                         </a>
@@ -156,7 +156,7 @@
 
 
                     <div class="destination">
-                        <a href="">
+                        <a href="pages/bukovel.html">
                             <img class="destination-img" src="./images/bukovel.jpeg" />
                             <h1>A breath of fresh air</h1>
                         </a>
