--- a/pages/bukovel.html
+++ b/pages/bukovel.html
@@ -25,7 +25,7 @@
             </a>
 
             <nav>
-                <a href="./destinations.html">Destinations</a>
+                <a href="destinations.html">Destinations</a>
                 <a href="plan.html">Plan a Trip</a>
                 <a href="contacts.html">Contacts</a>
             </nav>
@@ -48,11 +48,45 @@
             <div class="container">
 
                 <div id="destination-info">
+                    <div class="destination-header">
+                        <img class="d-header-img" src="../images/bukovel.jpeg">
+                        <div class="d-header-info">
+                            <h2>Vienna, Austria</h2>
+                            <h2>Enjoy the beauty of Vienna</h2>
+                            <p>
+                                Bukovel is a popular ski resort located in the Carpathian Mountains of Ukraine. Known
+                                for its modern facilities, it offers a variety of winter sports, including skiing,
+                                snowboarding, and snowshoeing. The resort also features year-round activities such as
+                                hiking, mountain biking, and wellness services. With scenic views, high-quality
+                                infrastructure, and numerous entertainment options, Bukovel has become a top destination
+                                for both Ukrainian and international tourists.
+                            </p>
+                            <div class="rating"><i class="fa-solid fa-star"></i>4.9</div>
 
-                    
+                        </div>
+                    </div>
+
+                    <p class="destination-text">
+                        Bukovel is a vibrant and modern ski resort set in the Carpathian Mountains, designed to provide
+                        an exceptional experience for both adventure seekers and those looking for relaxation. The
+                        resort spans across a wide, picturesque area and is equipped with world-class facilities, making
+                        it a hub for winter sports and leisure activities.
+                        One of the key features of Bukovel is its extensive network of ski slopes, which cater to all
+                        levels of expertise. There are 16 ski lifts and over 60 kilometers of well-maintained slopes.
+                        For skiers and snowboarders, the resort offers everything from beginner-friendly runs to
+                        challenging, steep terrains for experts. The resort also features snow parks for freestyle
+                        enthusiasts and off-piste areas for those looking to explore more rugged terrain.
+                        Bukovel is not just for winter sports lovers. In the summer months, it transforms into an
+                        outdoor paradise with activities such as hiking, mountain biking, and horseback riding. The lush
+                        green landscape is perfect for exploring, with numerous trails offering scenic views of the
+                        surrounding mountains.
+
+                </div>
+
 
 
             </div>
+
         </section>
 
         <section>
@@ -105,7 +139,6 @@
     </footer>
 
     <script src="../js/main.js"></script>
-    <script src="../js/destinations.js"></script>
 </body>
 
 </html>
