--- a/pages/kemer.html
+++ b/pages/kemer.html
@@ -25,7 +25,7 @@
             </a>
 
             <nav>
-                <a href="./destinations.html">Destinations</a>
+                <a href="destinations.html">Destinations</a>
                 <a href="plan.html">Plan a Trip</a>
                 <a href="contacts.html">Contacts</a>
             </nav>
@@ -48,11 +48,42 @@
             <div class="container">
 
                 <div id="destination-info">
+                    <div class="destination-header">
+                        <img class="d-header-img" src="../images/kemer.jpg">
+                        <div class="d-header-info">
+                            <h2>Vienna, Austria</h2>
+                            <h2>Enjoy the beauty of Vienna</h2>
+                            <p>
+                                    Kemer is a beautiful coastal town located on Turkey's Mediterranean coast, known for its
+                                    stunning beaches, clear waters, and proximity to the ancient ruins of Phaselis and
+                                    Olympos. Surrounded by the Taurus Mountains, it offers a mix of relaxation, adventure,
+                                    and cultural exploration. Kemer is a popular destination for nature lovers, history
+                                    buffs, and those seeking a resort getaway.
+                            </p>
+                            <div class="rating"><i class="fa-solid fa-star"></i>4.9</div>
 
-                    
+                        </div>
+                    </div>
+
+                    <p class="destination-text">
+                        Kemer, located on Turkey's Mediterranean coast, is a charming town that offers a perfect blend
+                        of natural beauty, rich history, and vibrant resort life. The town is surrounded by the majestic
+                        Taurus Mountains, offering a striking contrast to the crystal-clear waters of the Mediterranean
+                        Sea. Its well-preserved beaches are perfect for sunbathing, swimming, and water sports, making
+                        it a popular destination for beach lovers.
+                        Beyond its stunning coastline, Kemer is known for its natural surroundings. Visitors can explore
+                        the nearby forests, hiking trails, and waterfalls, with the Olympos National Park offering a
+                        great escape into nature. The ancient ruins of Phaselis and Olympos, both just a short distance
+                        away, provide a glimpse into the region's rich history. These ancient cities, set against the
+                        backdrop of stunning landscapes, are great for sightseeing and photography.
+                    </p>
+
+                </div>
+
 
 
             </div>
+
         </section>
 
         <section>
@@ -105,7 +136,6 @@
     </footer>
 
     <script src="../js/main.js"></script>
-    <script src="../js/destinations.js"></script>
 </body>
 
 </html>
