--- a/pages/prague.html
+++ b/pages/prague.html
@@ -25,7 +25,7 @@
             </a>
 
             <nav>
-                <a href="./destinations.html">Destinations</a>
+                <a href="destinations.html">Destinations</a>
                 <a href="plan.html">Plan a Trip</a>
                 <a href="contacts.html">Contacts</a>
             </nav>
@@ -48,11 +48,42 @@
             <div class="container">
 
                 <div id="destination-info">
+                    <div class="destination-header">
+                        <img class="d-header-img" src="../images/prague.jpg">
+                        <div class="d-header-info">
+                            <h2>Vienna, Austria</h2>
+                            <h2>Enjoy the beauty of Vienna</h2>
+                            <p>
+                                Prague, the capital of the Czech Republic, is a city of captivating beauty, rich
+                                history, and vibrant culture. Known for its medieval architecture, charming streets, and
+                                iconic landmarks like Prague Castle and the Charles Bridge, the city offers a perfect
+                                mix of old-world charm and modern life. With its lively atmosphere and rich cultural
+                                scene, Prague is a must-visit destination in Central Europe.
+                            </p>
+                            <div class="rating"><i class="fa-solid fa-star"></i>4.9</div>
 
-                    
+                        </div>
+                    </div>
+
+                    <p class="destination-text">
+                        Prague, often referred to as the "City of a Hundred Spires," is one of Europe's most enchanting
+                        cities, renowned for its medieval charm, stunning architecture, and vibrant cultural scene. The
+                        city’s Old Town (Staré Město) is a UNESCO World Heritage site, featuring cobblestone streets,
+                        historic buildings, and iconic landmarks such as the Astronomical Clock, the Charles Bridge, and
+                        the Gothic-style Prague Castle.
+                        Prague’s architectural landscape is a beautiful mix of styles, including Gothic, Baroque, and
+                        Romanesque, with breathtaking structures scattered throughout the city. The Prague Castle,
+                        perched on a hill overlooking the city, is the largest ancient castle in the world and offers
+                        panoramic views of Prague’s stunning skyline. The Charles Bridge, adorned with statues of
+                        saints, is another must-see attraction, connecting the Old Town with the Lesser Quarter.
+                    </p>
+
+                </div>
+
 
 
             </div>
+
         </section>
 
         <section>
@@ -105,7 +136,6 @@
     </footer>
 
     <script src="../js/main.js"></script>
-    <script src="../js/destinations.js"></script>
 </body>
 
 </html>
