--- a/pages/rome.html
+++ b/pages/rome.html
@@ -25,7 +25,7 @@
             </a>
 
             <nav>
-                <a href="./destinations.html">Destinations</a>
+                <a href="destinations.html">Destinations</a>
                 <a href="plan.html">Plan a Trip</a>
                 <a href="contacts.html">Contacts</a>
             </nav>
@@ -48,11 +48,47 @@
             <div class="container">
 
                 <div id="destination-info">
+                    <div class="destination-header">
+                        <img class="d-header-img" src="../images/rome.webp">
+                        <div class="d-header-info">
+                            <h2>Vienna, Austria</h2>
+                            <h2>Enjoy the beauty of Vienna</h2>
+                            <p>
+                                Rome, the capital of Italy, is a city steeped in history, culture, and art. Known as
+                                "The Eternal City," it boasts iconic landmarks like the Colosseum, Roman Forum, and St.
+                                Peter's Basilica. Rome is a blend of ancient ruins, Renaissance art, and modern life,
+                                making it a must-visit destination for history enthusiasts and travelers alike. With its
+                                charming streets, delicious cuisine, and rich heritage, Rome offers a unique experience
+                                for every visitor.
+                            </p>
+                            <div class="rating"><i class="fa-solid fa-star"></i>4.9</div>
 
-                    
+                        </div>
+                    </div>
+
+                    <p class="destination-text">
+                        Rome is one of the world’s most captivating cities, where ancient history, art, and modern
+                        culture converge to create a unique atmosphere that’s unlike any other. Often referred to as
+                        "The Eternal City," Rome offers a fascinating journey through over 2,500 years of history,
+                        beginning with its origins as a small village to becoming the heart of the mighty Roman Empire.
+                        The city is home to some of the most famous and well-preserved landmarks from antiquity, such as
+                        the Colosseum, the Roman Forum, and the Pantheon. These ancient ruins stand as testament to
+                        Rome’s influential past and attract millions of tourists each year. Visitors can explore the
+                        remnants of grand structures, marveling at their architectural feats and imagining the history
+                        that unfolded there.
+                        Beyond its ancient sites, Rome is a center for Renaissance and Baroque art, with masterpieces
+                        found in churches, palaces, and museums throughout the city. The Vatican, with St. Peter's
+                        Basilica and the Sistine Chapel, is home to some of the world’s most revered art collections.
+                        The city’s art scene is complemented by stunning fountains, piazzas, and sculptures that dot the
+                        landscape.  
+                    </p>
+
+                </div>
+
 
 
             </div>
+
         </section>
 
         <section>
@@ -105,7 +141,6 @@
     </footer>
 
     <script src="../js/main.js"></script>
-    <script src="../js/destinations.js"></script>
 </body>
 
 </html>
