--- a/pages/santorini.html
+++ b/pages/santorini.html
@@ -25,7 +25,7 @@
             </a>
 
             <nav>
-                <a href="./destinations.html">Destinations</a>
+                <a href="destinations.html">Destinations</a>
                 <a href="plan.html">Plan a Trip</a>
                 <a href="contacts.html">Contacts</a>
             </nav>
@@ -48,11 +48,40 @@
             <div class="container">
 
                 <div id="destination-info">
+                    <div class="destination-header">
+                        <img class="d-header-img" src="../images/greece.webp">
+                        <div class="d-header-info">
+                            <h2>Vienna, Austria</h2>
+                            <h2>Enjoy the beauty of Vienna</h2>
+                            <p>
+                                Santorini is a stunning island in Greece’s Aegean Sea, famous for its whitewashed
+                                buildings, blue-domed churches, and breathtaking sunsets. Known for its dramatic cliffs,
+                                crystal-clear waters, and vibrant nightlife, Santorini is a popular destination for both
+                                relaxation and adventure. The island’s picturesque beauty and rich history make it one
+                                of the most sought-after travel spots in the world.
+                            </p>
+                            <div class="rating"><i class="fa-solid fa-star"></i>4.9</div>
 
-                    
+                        </div>
+                    </div>
+
+                    <p class="destination-text">
+                        Santorini is one of the most iconic and picturesque destinations in Greece, celebrated for its
+                        dramatic landscapes, stunning architecture, and mesmerizing sunsets. Located in the Aegean Sea,
+                        the island is part of the Cyclades group and was shaped by a volcanic eruption that occurred
+                        thousands of years ago, leaving behind steep cliffs and a caldera that offers breathtaking views
+                        of the sea.
+                        The island is known for its distinctive whitewashed buildings with blue-domed roofs, which are
+                        especially famous in towns like Oia and Fira. These charming villages are perched on the cliffs,
+                        offering panoramic views of the crystal-clear waters below. Santorini’s narrow streets are lined
+                        with quaint cafes, boutique shops, and art galleries, making it a perfect place to explore on
+                        foot.
+                </div>
+
 
 
             </div>
+
         </section>
 
         <section>
@@ -105,7 +134,6 @@
     </footer>
 
     <script src="../js/main.js"></script>
-    <script src="../js/destinations.js"></script>
 </body>
 
 </html>
